# c-template

./: .gitignore  CMakeLists.txt  gitreview.py
src/common/: base64.h  request_context.h  util.cpp  util.h
src/demo/: cartesian_product.cpp  rvo.cpp  time.cpp
src/web/: audio_data_handler.cpp  audio_data_handler.h  request_handler.cpp  request_handler.h
